# dino

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  AppImageBuilder.yml  BUILD_MACOS.md  CMakeLists.txt  LICENSE_SHORT  README-WIN64.md  README.md  appveyor.yml  build-flatpack.sh  build-meson-windows.sh  build-win64.sh  configure  dino.doap  dino.doap.in  dino.spec  im.dino.Dino.json  im.dino.Dino.yaml  meson.build  meson_options.txt  notes.md
client/: CMakeLists.txt
client/data/: chat_input.ui  conversation_list_titlebar.ui  conversation_titlebar.ui  menu_add.ui  menu_conversation.ui  settings.gschema.xml  settings_dialog.ui  style.css
client/data/add_conversation/: add_contact_dialog.ui  conference_details_fragment.ui  list_row.ui  select_jid_fragment.ui
client/data/manage_accounts/: account_row.ui  add_account_dialog.ui  dialog.ui
client/src/: main.vala
client/src/dbus/: upower.vala
client/src/entity/: account.vala  conversation.vala  jid.vala  message.vala
client/src/service/: avatar_manager.vala  avatar_storage.vala  chat_interaction.vala  connection_manager.vala  conversation_manager.vala  counterpart_interaction_manager.vala  database.vala  message_manager.vala  module_manager.vala  muc_manager.vala  presence_manager.vala  roster_manager.vala  stream_interactor.vala
client/src/ui/: application.vala  avatar_generator.vala  conversation_list_titlebar.vala  conversation_titlebar.vala  notifications.vala  occupant_list.vala  occupant_list_row.vala  settings_dialog.vala  unified_window.vala  util.vala
crypto-vala/: CMakeLists.txt  crypto-vala.deps  meson.build
crypto-vala/src/: cipher.vala  cipher_converter.vala  error.vala  random.vala  srtp.vala
crypto-vala/vapi/: libsrtp2.vapi  openssl.vapi
gpgme-vala/: CMakeLists.txt
gpgme-vala/src/: fix.c  fix.h  gpgme-helper.vala  gpgme_fix.h  gpgme_helper.vala
gpgme-vala/vapi/: gpgme.deps  gpgme.vapi  gpgme_public.vapi
libdino/: CMakeLists.txt  dino.deps  meson.build  version.py
libdino/data/: dino.gschema.xml  gschemas.compiled  menu_app.ui  menu_encryption.ui  occupant_list_item.ui  unified_window.ui
libdino/data/add_conversation/: add_groupchat_dialog.ui
libdino/data/conversation_selector/: chat_row_tooltip.ui  conversation_row.ui
libdino/data/conversation_summary/: message_item.ui
libdino/data/manage_accounts/: dialog.ui  pgp_stack.ui
libdino/src/: application.vala  dino_i18n.h  plugin.vala  settings.vala  util.vala  version.vala  version.vala.in
libdino/src/dbus/: dbus.vala  login1.vala  mpris.vala  network_manager.vala  network_manager_dbus_properties.vala  networkmanager.vala  notifications.vala  status_notifier_item.vala
libdino/src/entity/: account.vala  call.vala  conversation.vala  encryption.vala  file_transfer.vala  jid.vala  message.vala  settings.vala
libdino/src/plugin/: interfaces.vala  loader.vala  registry.vala
libdino/src/service/: avatar_manager.vala  avatar_storage.vala  blocking_manager.vala  call_peer_state.vala  call_state.vala  call_store.vala  calls.vala  chat_interaction.vala  connection_manager.vala  contact_model.vala  content_item_accumulator.vala  content_item_store.vala  conversation_manager.vala  counterpart_interaction_manager.vala  database.vala  entity_capabilities_storage.vala  entity_info.vala  fallback_body.vala  file_manager.vala  file_transfer_storage.vala  history_sync.vala  jingle_file_manager.vala  muc_manager.vala  (+28 more)
libdino/tests/: common.vala  jid.vala  testcase.vala  weak_map.vala
main/: CMakeLists.txt  dino-info.rc  meson.build
main/data/: account_picker_row.ui  call_widget.ui  chat_input.ui  contact_details_dialog.ui  conversation_details.css  conversation_details.ui  conversation_item_widget.ui  conversation_list_titlebar.ui  conversation_list_titlebar_csd.ui  conversation_row.ui  conversation_selector.ui  conversation_titlebar.ui  conversation_view.ui  default_encryption_dialog.ui  dino.desktop  emojichooser.ui  file_default_widget.ui  file_input_widget.ui  file_send_overlay.ui  file_send_overlay_file_widget.ui  global_search.ui  gresource.xml  im.dino.Dino.appdata.xml  im.dino.Dino.appdata.xml.in  im.dino.Dino.desktop  im.dino.Dino.service  im.dino.desktop  im.dino.service  join_room_dialog.ui  join_room_dialog1.ui  join_room_dialog2.ui  main_window.ui  main_window_placeholder.ui  menu_add.ui  menu_app.ui  menu_conversation.ui  menu_encryption.ui  menu_presence.ui  menu_rtt.ui  message_item_widget_edit_mode.ui  (+18 more)
main/po/: LINGUAS  POTFILES.in  ar.po  ca.po  cs.po  da.po  de.po  dino.pot  el.po  en.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  hi.po  hu.po  hy.po  ia.po  id.po  ie.po  is.po  isv.po  it.po  ja.po  ka.po  kab.po  ko.po  lb.po  lt.po  lv.po  meson.build  nb.po  nl.po  nl_BE.po  oc.po  (+18 more)
main/src/: emojichooser.c  emojichooser.h  main.vala
main/vapi/: emojichooser.vapi  icu-uc.vapi
plugins/: CMakeLists.txt  meson.build
plugins/crypto-vala/: CMakeLists.txt
plugins/gpgme-vala/: CMakeLists.txt
plugins/http-files/: CMakeLists.txt  meson.build
plugins/ice/: CMakeLists.txt  meson.build
plugins/notification-sound/: CMakeLists.txt  meson.build
plugins/omemo/: CMakeLists.txt  meson.build
plugins/omemo-vala/: CMakeLists.txt
plugins/openpgp/: CMakeLists.txt  meson.build
plugins/phone-ringer/: CMakeLists.txt  meson.build
plugins/rtp/: CMakeLists.txt  meson.build
plugins/signal-protocol/: CMakeLists.txt
plugins/tray-icon/: meson.build
plugins/win32-fonts/: CMakeLists.txt  meson.build
plugins/windows-notification/: .gitignore  CMakeLists.txt  README.md  meson.build  prepare-yolort.sh
qlite/: CMakeLists.txt  meson.build  qlite.deps
qlite/src/: column.vala  database.vala  delete_builder.vala  insert_builder.vala  query_builder.vala  row.vala  statement_builder.vala  table.vala  update_builder.vala  upsert_builder.vala
xmpp-vala/: CMakeLists.txt  meson.build  xmpp-vala.deps
xmpp-vala/src/: file_content_type.vala  glib_fixes.vapi  util.vala
xmpp-vala/tests/: color.vala  common.vala  jid.vala  stanza.vala  testcase.vala  util.vala
xmpp-vala/vapi/: icu-uc.vapi  libgsasl.vapi
(+919 files in other folders)
